RESOLVED FIXED133786
Fix build break on EFL and GTK ports since r169820
https://bugs.webkit.org/show_bug.cgi?id=133786
Summary Fix build break on EFL and GTK ports since r169820
Gyuyoung Kim
Reported 2014-06-11 23:01:57 PDT
SSIA. Below build error occurs now. /home/webkit/slaves/perfbot/buildslave/efl-linux-64-release-wk2-perf/build/Source/WebKit2/WebProcess/Plugins/PluginView.cpp: In member function 'void WebKit::PluginView::pluginSnapshotTimerFired()': /home/webkit/slaves/perfbot/buildslave/efl-linux-64-release-wk2-perf/build/Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1693:40: error: 'class WebKit::WebPage' has no member named 'plugInIntersectsSearchRect' /home/webkit/slaves/perfbot/buildslave/efl-linux-64-release-wk2-perf/build/Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1707:96: error: 'isAlmostSolidColor' was not declared in this scope /home/webkit/slaves/perfbot/buildslave/efl-linux-64-release-wk2-perf/build/Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1721:20: error: 'class WebKit::WebPage' has no member named 'plugInIsPrimarySize' ICECC[5040] 22:12:29: Compiled on 10.6.11.36
Attachments
Patch (3.00 KB, patch)
2014-06-11 23:03 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-06-11 23:03:12 PDT
Gyuyoung Kim
Comment 2 2014-06-11 23:36:46 PDT
Comment on attachment 232933 [details] Patch Clearing flags on attachment: 232933 Committed r169881: <http://trac.webkit.org/changeset/169881>
Gyuyoung Kim
Comment 3 2014-06-11 23:38:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.