Fix build break on EFL and GTK ports since r169820 https://bugs.webkit.org/show_bug.cgi?id=133786

Reviewed by Philippe Normand.

ENABLE_PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC macro are missing in PluginView::pluginSnapshotTimerFired().

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::pluginSnapshotTimerFired):

Canonical link: https://commits.webkit.org/151766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169881 268f45cc-cd09-0410-ab3c-d52691b4dbfc